core/src/ast/snapshots/rain_core__ast__test__comment.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        let b = 2\n        // This is silly\n        let a = b // Very silly\n        // Hehe\n        \")"
---
ModuleRoot(
 LetDeclare(
  b
  IntegerLiteral(
   2
  )
 )
 LetDeclare(
  a
  Ident(
   b
  )
 )
)
