core/src/ast/snapshots/rain_core__ast__test__factorial.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        let assert = std.test.assert\n        let eq = std.ops.eq\n\n        fn main() {\n        \tassert(factorial(5), 12)\n        }\n\n        fn factorial(n) {\n            if n == 0 {\n                1\n            } else {\n            \tfactorial(n - 1) * n\n        \t}\n        }\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  assert
  BinaryOp(
   BinaryOp(
    Ident(
     std
    )
    .
    Ident(
     test
    )
   )
   .
   Ident(
    assert
   )
  )
 )
 LetDeclare(
  private
  eq
  BinaryOp(
   BinaryOp(
    Ident(
     std
    )
    .
    Ident(
     ops
    )
   )
   .
   Ident(
    eq
   )
  )
 )
 FnDeclare(
  private
  main
  Block(
   FnCall(
    Ident(
     assert
    )
    FnCall(
     Ident(
      factorial
     )
     IntegerLiteral(
      5
     )
    )
    IntegerLiteral(
     12
    )
   )
  )
 )
 FnDeclare(
  private
  factorial
  Block(
   IfCondition(
    BinaryOp(
     Ident(
      n
     )
     ==
     IntegerLiteral(
      0
     )
    )
    Block(
     IntegerLiteral(
      1
     )
    )
    Block(
     BinaryOp(
      FnCall(
       Ident(
        factorial
       )
       BinaryOp(
        Ident(
         n
        )
        -
        IntegerLiteral(
         1
        )
       )
      )
      *
      Ident(
       n
      )
     )
    )
   )
  )
 )
)
