core/src/ast/snapshots/rain_core__ast__test__fn_call.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        let val = foo(3)\n        let val = foo(bar(4))\n        \")"
---
ModuleRoot(
 LetDeclare(
  val
  FnCall(
   Ident(
    foo
   )
   IntegerLiteral(
    3
   )
  )
 )
 LetDeclare(
  val
  FnCall(
   Ident(
    foo
   )
   FnCall(
    Ident(
     bar
    )
    IntegerLiteral(
     4
    )
   )
  )
 )
)
