core/src/ast/snapshots/rain_core__ast__test__hello_world.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        fn main() {\n            print(\\\"Hello world\\\")\n        }\n        \")"
---
ModuleRoot(
 FnDeclare(
  private
  main
  Block(
   FnCall(
    Ident(
     print
    )
    StringLiteral(
     "Hello world"
    )
   )
  )
 )
)
