core/src/ast/snapshots/rain_core__ast__test__let_declare.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        let a = 4\n        let asjldf = \\\"asjldf\\\"\n        \")"
---
ModuleRoot(
 LetDeclare(
  private
  a
  IntegerLiteral(
   4
  )
 )
 LetDeclare(
  private
  asjldf
  StringLiteral(
   "asjldf"
  )
 )
)
