core/src/ast/snapshots/rain_core__ast__test__pub_fn.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        pub fn foo() {}\n        \")"
---
ModuleRoot(
 FnDeclare(
  pub
  foo
  Block(
  )
 )
)
