core/src/ast/snapshots/rain_core__ast__test__pub_let.snap
---
source: core/src/ast/test.rs
expression: "parse_display_script(\"\n        pub let foo = 5\n        \")"
---
ModuleRoot(
 LetDeclare(
  pub
  foo
  IntegerLiteral(
   5
  )
 )
)
